clusters/on-prem/core/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: minio-service
    namespace: minio
spec:
    selector:
        app: minio
    type: ClusterIP
    ports:
        - name: minio
          protocol: TCP
          port: 9000
          targetPort: 9000
        - name: minio-console
          protocol: TCP
          port: 9001
          targetPort: 9001
