clusters/on-prem/core/minio/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: minio-ingress
    namespace: minio
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:zkjVk2/ruXgsTcKgY+lEqJd57N5Fyg==,iv:BfhjlxMH4A70qzeuaS7pgi2s/SnVkW2Z/aDgHWWyilY=,tag:KXhsMFLjoRCjAsRIZIwf5g==,type:str]
            - ENC[AES256_GCM,data:Eqw/BlyHWLcN02hA1OsGfnu+8lz5zx7fPtM/m81G,iv:H1vSdyk5bgdtZxKC1EdEGaulk+T12fJz4DHnh/Kkf44=,tag:FUWrKfhWoxJVJEVE2nq5IA==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:6rQsB+/2xK281gQJDUaXmNLpTyVLAg==,iv:Mz1axcKrJzQA+IzIlG8sP8Qizecc9u7Qp7pZWH8HVPY=,tag:cVtl+HyhUTGt4PlEhcdw5Q==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: minio-service
                        port:
                            number: 9000
        - host: ENC[AES256_GCM,data:8VetniRn41yHjVIjGatQN5okZJ3M8ivnPU1PsPVl,iv:oPwGkhtgHQVoHN/vSnRk6KrscjwGJ/Sd7oUaFLpc5L8=,tag:fQJvnFNzSBITgmooIXAxgQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: minio-service
                        port:
                            number: 9001
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDTnI1aHh1SnppMFBoNm1a
[...]
            J+sD2RQN/SXheoLN4NN1Jx0nFqeT8VbhfdK0vXh/T1uTZ6tDxBcEqg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-24T18:50:53Z"
    mac: ENC[AES256_GCM,data:SS1ChRgx1YZFAjs7eX0m4ykYshgys6319mySP3I/BpF/0nOPA/wvlJXB21uGu3SRCioRC465+W3aKgnWuG1X7KqsAXWG9xN9r5MjNwcPj6QYjIPuM3yfyZggPibvZ53g/3aIumCStEtEVumF0JuCuAdbmVNG5qkLqmMIMPg3gfI=,iv:O8agiS4ZJYUv++3QSJwhzjvS2YBRhLVn+UJISLDG+Yk=,tag:VHoJHOVmK78H7UGSFVFLag==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
